tests/baselines/reference/parserUnaryExpression1.errors.txt
parserUnaryExpression1.ts(1,3): error TS2356: An arithmetic operand must be of type 'any', 'number', 'bigint' or an enum type.


==== parserUnaryExpression1.ts (1 errors) ====
    ++this;
      ~~~~
!!! error TS2356: An arithmetic operand must be of type 'any', 'number', 'bigint' or an enum type.